# BadgerMind

./: .gitignore  Makefile.am  arena.c  arena.h  array.c  array.h  configure.in  fbx-convert-binary.cc  fbx-convert-json.cc  fbx-convert.cc  fbx-convert.h  png-wrapper.c  png-wrapper.h  script-binary.c  script-binary.cc  script-html.c  script-lexer.l  script-optimize.cc  script-parser.y  script-vm.h  script.c  script.h  texture-convert.cc  watch-subdirs.c
PVRTC/: pvrtc.h
PVRTC/Windows_x86_32/Lib/: PVRTC.lib
PVRTC/Windows_x86_64/Dll/: pvrtc_dll.h
PVRTC/Windows_x86_64/Lib/: PVRTC.lib
PVRTexLib/: PVRTArray.h  PVRTError.h  PVRTGlobal.h  PVRTMap.h  PVRTString.h  PVRTTexture.h  PVRTexLibVersion.h  PVRTexture.h  PVRTextureDefines.h  PVRTextureFormat.h  PVRTextureHeader.h  PVRTextureUtilities.h
PVRTexLib/Documentation/html/: PVRTArray_8h-source.html  PVRTArray_8h.html  PVRTArray_8h__dep__incl.map  PVRTArray_8h__dep__incl.md5  PVRTArray_8h__incl.md5  PVRTError_8h-source.html  PVRTError_8h.html  PVRTError_8h__dep__incl.map  PVRTError_8h__dep__incl.md5  PVRTError_8h__incl.md5  PVRTGlobal_8h-source.html  PVRTGlobal_8h.html  PVRTGlobal_8h__dep__incl.map  PVRTGlobal_8h__dep__incl.md5  PVRTGlobal_8h__incl.md5  PVRTMap_8h-source.html  PVRTMap_8h.html  PVRTMap_8h__dep__incl.map  PVRTMap_8h__dep__incl.md5  PVRTMap_8h__incl.md5  PVRTString_8h-source.html  PVRTString_8h.html  PVRTString_8h__dep__incl.map  PVRTString_8h__dep__incl.md5  PVRTString_8h__incl.md5  PVRTTexture_8h-source.html  PVRTTexture_8h.html  PVRTTexture_8h__dep__incl.map  PVRTTexture_8h__dep__incl.md5  PVRTTexture_8h__incl.md5  PVRTexLibVersion_8h-source.html  PVRTexLibVersion_8h.html  PVRTextureDefines_8h-source.html  PVRTextureDefines_8h.html  PVRTextureDefines_8h__dep__incl.map  PVRTextureDefines_8h__dep__incl.md5  PVRTextureDefines_8h__incl.map  PVRTextureDefines_8h__incl.md5  PVRTextureFormat_8h-source.html  PVRTextureFormat_8h.html  (+95 more)
webapp/: .htaccess  bid-to-html.php  bid-to-script.php  convert.php  index.php  model-webgl-wrapper.php  show-as-plaintext.php  webgl-viewer.js
webapp/famfamfam/: .htaccess
webapp/lib/: git.php  html.php  path.php
