AC_INIT(BadgerMind,1.0.0,[morten.hustveit@gmail.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AC_PROG_CC
AC_PROG_CXX
AC_PROG_LEX
AC_PROG_YACC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_DEFINE(_GNU_SOURCE, [1], [GNU C Library extensions])

AC_CONFIG_HEADERS([config.h])
AC_OUTPUT(Makefile)
