AC_INIT(BadgerMind,1.0.0,[morten.hustveit@gmail.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AC_PROG_CC
AC_PROG_CXX
AC_PROG_LEX
AC_PROG_YACC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_DEFINE(_GNU_SOURCE, [1], [GNU C Library extensions])

AC_DEFUN([AS_AC_EXPAND],
[
  EXP_VAR=[$1]
  FROM_VAR=[$2]

  dnl first expand prefix and exec_prefix if necessary
  prefix_save=$prefix
  exec_prefix_save=$exec_prefix

  dnl if no prefix given, then use /usr/local, the default prefix
  if test "x$prefix" = "xNONE"; then
    prefix="$ac_default_prefix"
  fi
  dnl if no exec_prefix given, then use prefix
  if test "x$exec_prefix" = "xNONE"; then
    exec_prefix=$prefix
  fi

  full_var="$FROM_VAR"
  dnl loop until it doesn't change anymore
  while true; do
    new_full_var="`eval echo $full_var`"
    if test "x$new_full_var" = "x$full_var"; then break; fi
    full_var=$new_full_var
  done

  dnl clean up
  full_var=$new_full_var
  AC_SUBST([$1], "$full_var")

  dnl restore prefix and exec_prefix
  prefix=$prefix_save
  exec_prefix=$exec_prefix_save
])

AS_AC_EXPAND(BINDIR, $bindir)
AS_AC_EXPAND(DATADIR, $datadir)
AS_AC_EXPAND(DATAROOTDIR, $datarootdir)
AS_AC_EXPAND(DOCDIR, $docdir)
AS_AC_EXPAND(DVIDIR, $dvidir)
AS_AC_EXPAND(HTMLDIR, $htmldir)
AS_AC_EXPAND(INCLUDEDIR, $includedir)
AS_AC_EXPAND(INFODIR, $infodir)
AS_AC_EXPAND(LIBDIR, $libdir)
AS_AC_EXPAND(LIBEXECDIR, $libexecdir)
AS_AC_EXPAND(LOCALEDIR, $localedir)
AS_AC_EXPAND(LOCALSTATEDIR, $localstatedir)
AS_AC_EXPAND(MANDIR, $mandir)
AS_AC_EXPAND(OLDINCLUDEDIR, $oldincludedir)
AS_AC_EXPAND(PDFDIR, $pdfdir)
AS_AC_EXPAND(PSDIR, $psdir)
AS_AC_EXPAND(SBINDIR, $sbindir)
AS_AC_EXPAND(SHAREDSTATEDIR, $sharedstatedir)
AS_AC_EXPAND(SYSCONFDIR, $sysconfdir)

AC_DEFINE_UNQUOTED([BINDIR], ["$BINDIR"], [user executables])
AC_DEFINE_UNQUOTED([SBINDIR], ["$SBINDIR"], [system admin executables])
AC_DEFINE_UNQUOTED([LIBEXECDIR], ["$LIBEXECDIR"], [program executables])
AC_DEFINE_UNQUOTED([SYSCONFDIR], ["$SYSCONFDIR"], [read-only single-machine data])
AC_DEFINE_UNQUOTED([SHAREDSTATEDIR], ["$SHAREDSTATEDIR"], [modifiable architecture-independent data])
AC_DEFINE_UNQUOTED([LOCALSTATEDIR], ["$LOCALSTATEDIR"], [modifiable single-machine data])
AC_DEFINE_UNQUOTED([LIBDIR], ["$LIBDIR"], [object cod libraries])
AC_DEFINE_UNQUOTED([INCLUDEDIR], ["$INCLUDEDIR"], [C header files])
AC_DEFINE_UNQUOTED([OLDINCLUDEDIR], ["$OLDINCLUDEDIR"], [C header files for non-gcc])
AC_DEFINE_UNQUOTED([DATAROOTDIR], ["$DATAROOTDIR"], [read-only arch.-independent data root])
AC_DEFINE_UNQUOTED([DATADIR], ["$DATADIR"], [read-only architecture-independent data])
AC_DEFINE_UNQUOTED([INFODIR], ["$INFODIR"], [info documentation])
AC_DEFINE_UNQUOTED([LOCALEDIR], ["$LOCALEDIR"], [locale-dependent data])
AC_DEFINE_UNQUOTED([MANDIR], ["$MANDIR"], [man documentation])
AC_DEFINE_UNQUOTED([DOCDIR], ["$DOCDIR"], [documentation root])
AC_DEFINE_UNQUOTED([HTMLDIR], ["$HTMLDIR"], [html documentation])
AC_DEFINE_UNQUOTED([DVIDIR], ["$DVIDIR"], [dvi documentation])
AC_DEFINE_UNQUOTED([PDFDIR], ["$PDFDIR"], [pdf documentation])
AC_DEFINE_UNQUOTED([PSDIR], ["$PSDIR"], [ps documentation])

AC_CONFIG_HEADERS([config.h])
AC_OUTPUT(Makefile)
